# chatable

./: .gitignore  README.md  flutter_rust_bridge.yaml  pubspec.yaml
android/app/: build.gradle.kts
chatable_rlib/: Cargo.toml
chatable_rlib/examples/: func_test.rs
chatable_rlib/src/: frb_generated.rs
chatable_rlib/src/api/: mod.rs  table_file.rs
docs/: rust-api.md
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart  theme.dart
lib/events/: chat_session_events.dart  events.dart  ui_events.dart
lib/l10n/: app_en.arb  app_zh.arb
lib/models/: app_config_models.dart  app_config_models.g.dart  appearance_config_model.dart  appearance_config_model.g.dart  chat_msg_models.dart  chat_msg_models.g.dart  chat_session_models.dart  chat_session_models.g.dart  language_config_model.dart  language_config_model.g.dart  table_obj_models.dart  table_obj_models.g.dart
lib/pages/: home_page.dart
lib/src/rust/: frb_generated.dart  (+2 more)
lib/utils/: db.dart  fs.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: chatable_lib.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: chatable_lib.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+11 files in other folders)
