[package]
name = "chatable_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
flutter_rust_bridge = "=2.9.0"
rsv_lib = {  path = "../../rust-rsv", package = "csv-txt-excel-parallel-toolkit"}
anyhow = { version = "1" }
rust_decimal = { version = "1.37.2", features = ["macros"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }


[[example]]
name = "func_test"
path = "examples/func_test.rs"